bubba-backend (1.2.4.17) claire estelle; urgency=low

  * adding more interface set funtions 

 -- Carl Fürstenberg <carl@excito.com>  Tue, 05 Jan 2010 16:45:03 +0100

bubba-backend (1.2.4.16) claire estelle; urgency=low

  * changing logic of change_distribution to allow multiple distributions,
    removing the -d option to set dists as argv instead

 -- Carl Fürstenberg <carl@excito.com>  Mon, 04 Jan 2010 17:09:09 +0100

bubba-backend (1.2.4.15) claire estelle; urgency=low

  * non-free instead of nonfree
  * remove v=* as it's difficult as best

 -- Carl Fürstenberg <carl@excito.com>  Mon, 04 Jan 2010 16:30:51 +0100

bubba-backend (1.2.4.14) karmic; urgency=low

  * bugfix 

 -- Carl Fürstenberg <carl@excito.com>  Mon, 04 Jan 2010 16:23:29 +0100

bubba-backend (1.2.4.13) estelle claire; urgency=low

  * adding change_distribution script 

 -- Carl Fürstenberg <carl@excito.com>  Mon, 04 Jan 2010 16:15:49 +0100

bubba-backend (1.2.4.12) claire; urgency=low

  * Refactored query_service to return true if service is enabled 

 -- Tor Krill <tor@excito.com>  Sun, 03 Jan 2010 15:40:38 +0100

bubba-backend (1.2.4.11) karmic; urgency=low

  * Remove the old and glory persistent rules bugger 

 -- Carl Fürstenberg <carl@excito.com>  Fri, 11 Dec 2009 09:59:40 +0100

bubba-backend (1.2.4.10) claire; urgency=low

  [ Carl Fürstenberg ]
  * updating cupsd.conf, chainging @LOCAL to @IF(eth1) (Closes: #1071)
  * evil '==' changed to non-evil 'eq' in firewall.pl 

  [ Tor Krill ]
  * Save firewall rules to local file after changing lan if
  * Trim return value when retrieving lan if from networkmanager 
  * Add interface argument to dnsmasq config 

 -- Tor Krill <tor@excito.com>  Mon, 30 Nov 2009 23:17:38 +0100

bubba-backend (1.2.4.9) claire; urgency=low

  * adding divert for smb.conf 
  * bumping depends on samba to 3.4

 -- Carl Fürstenberg <carl@excito.com>  Thu, 26 Nov 2009 12:55:36 +0100

bubba-backend (1.2.4.8) claire; urgency=low

  * divert 
