@@ -1,3 +1,9 @@
+bubba-backend (1.2.4.18) claire estelle; urgency=low
+
+  * reduce to single function 
+
+ -- Carl Fürstenberg <carl@excito.com>  Tue, 05 Jan 2010 17:09:27 +0100
+
 bubba-backend (1.2.4.17) claire estelle; urgency=low
 
   * adding more interface set funtions 
